laboratory/3_distributed_application/todo-front-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front-deployment
  labels:
    app: todo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
        - name: todo-front
          image: lemoncodersbc/lc-todo-front:v5-2024
          ports:
            - containerPort: 80
