laboratory/3_distributed_application/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  selector:
    app: todo-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
