laboratory/3_distributed_application/todo-front-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: todo-front-service
spec:
  selector:
    app: todo-front
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
