laboratory/3_distributed_application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /live
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front-service
                port:
                  number: 80
